--- a/chrome/locale/el/meta.properties
+++ b/chrome/locale/el/meta.properties
@@ -1,3 +1,3 @@
-translator=Sparky Bluefang
+translator=Γιώργος Μαλαμάς
 name=Preserve Download Modification Timestamp
-description=Preserve the modification timestamp, sent by the server, for downloaded files
+description=Διατηρήστε τη χρονοσήμανση τροποποίησης, που αποστέλλεται από τον εξυπηρετητή, για τα ληφθέντα αρχεία.
