--- a/chrome/locale/pt-BR/meta.properties
+++ b/chrome/locale/pt-BR/meta.properties
@@ -1,3 +1,3 @@
-translator=Sparky Bluefang
+translator=Gutierrez PS
 name=Preserve Download Modification Timestamp
-description=Preserve the modification timestamp, sent by the server, for downloaded files
+description=Preserva a data de modificação dos arquivos baixados, enviada pelo servidor
