--- a/chrome/locale/sv-SE/console.properties
+++ b/chrome/locale/sv-SE/console.properties
@@ -4,7 +4,7 @@ net.stat=Nätverksstatusen ändrades - 0x%S (FEL: %s)
 net.http=Filhämtning via HTTP://
 net.file=Filhämtning via FILE://
 net.ftp=Filhämtning via FTP://
-dl.stat=Nerladdningsstatusen ändrades - %S
+dl.stat=Hämtningsstatusen ändrades - %S
 dl.failed=Hämtningen avslutades inte
 dl.finished=Hämtningen avslutades, uppdaterar tidsstämpeln
 dl.updated=Senaste ändringsdatum är nu %S
