--- a/chrome/locale/sv-SE/meta.properties
+++ b/chrome/locale/sv-SE/meta.properties
@@ -1,3 +1,3 @@
-translator=Sparky Bluefang
+translator=Mikael Hiort af Ornäs
 name=Preserve Download Modification Timestamp
-description=Preserve the modification timestamp, sent by the server, for downloaded files
+description=Behåll ändringstidsstämpeln, som skickas av servern, för hämtade filer
