--- a/chrome/locale/fr/meta.properties
+++ b/chrome/locale/fr/meta.properties
@@ -1,3 +1,3 @@
-translator=Sparky Bluefang
+translator=Jojaba
 name=Preserve Download Modification Timestamp
-description=Preserve the modification timestamp, sent by the server, for downloaded files
+description=Permet de conserver la date de modification envoyée par le serveur pour les fichiers téléchargés
