--- a/chrome/locale/sr/meta.properties
+++ b/chrome/locale/sr/meta.properties
@@ -1,3 +1,3 @@
-translator=Sparky Bluefang
+translator=DakSrbija
 name=Preserve Download Modification Timestamp
-description=Preserve the modification timestamp, sent by the server, for downloaded files
+description=Чува време измене преузетих датотека које се очитава са сервера
