--- a/chrome/locale/zh-CN/meta.properties
+++ b/chrome/locale/zh-CN/meta.properties
@@ -1,3 +1,3 @@
-translator=Sparky Bluefang
+translator=yfdyh000
 name=Preserve Download Modification Timestamp
-description=Preserve the modification timestamp, sent by the server, for downloaded files
+description=让下载的文件的修改时间保持为服务器发送的时间戳
