--- a/chrome/locale/fr/meta.properties
+++ b/chrome/locale/fr/meta.properties
@@ -1,3 +1,3 @@
 translator=Jojaba
 name=Preserve Download Modification Timestamp
-description=Permet de conserver la date de modification envoyée par le serveur pour les fichiers téléchargés
+description=Conserve le timestamp (qui n'est donc pas modifié), envoyé par le serveur pour les fichiers téléchargés.
