--- a/chrome/locale/pt-BR/console.properties
+++ b/chrome/locale/pt-BR/console.properties
@@ -13,6 +13,6 @@ dl.notarget=Destino do download indisponível
 dl.nofile=Arquivo de destino do download não existe
 enabled=HABILITADO
 disabled=DESABILITADO
-log.level=Logging verbosity now %S
+log.level=Registrando agora %S
 log.paths=Incluindo fonte e destino do download - %S
 log.clean=Limpando saída do log - %S
