--- a/chrome/locale/zh-CN/meta.properties
+++ b/chrome/locale/zh-CN/meta.properties
@@ -1,3 +1,3 @@
 translator=yfdyh000
 name=Preserve Download Modification Timestamp
-description=让下载的文件的修改时间保持为服务器发送的时间戳
+description=保留下载的文件其服务器发送的文件修改时间
