--- a/chrome/locale/de/meta.properties
+++ b/chrome/locale/de/meta.properties
@@ -1,3 +1,3 @@
 translator=Sparky Bluefang
 name=Preserve Download Modification Timestamp
-description=Preserve the modification timestamp, sent by the server, for downloaded files
+description=Übernimmt für Downloads das Datum der letzten Änderung der Datei vom Server
