--- a/chrome/locale/pt-BR/meta.properties
+++ b/chrome/locale/pt-BR/meta.properties
@@ -1,3 +1,3 @@
 translator=Gutierrez PS
 name=Preserve Download Modification Timestamp
-description=Preserva a data de modificação dos arquivos baixados, enviada pelo servidor
+description=Preserva a timestamp de modificação, enviada pelo servidor, dos arquivos baixados
