--- a/chrome/locale/sr/meta.properties
+++ b/chrome/locale/sr/meta.properties
@@ -1,3 +1,3 @@
 translator=DakSrbija
 name=Preserve Download Modification Timestamp
-description=Чува време измене преузетих датотека које се очитава са сервера
+description=Чува податке о времену мењања преузетих датотека, које се добија са сервера
