--- a/chrome/locale/sv-SE/meta.properties
+++ b/chrome/locale/sv-SE/meta.properties
@@ -1,3 +1,3 @@
 translator=Mikael Hiort af Ornäs
 name=Preserve Download Modification Timestamp
-description=Behåll ändringstidsstämpeln, som skickas av servern, för hämtade filer
+description=Behåll tidsstämpeln för senaste ändring, som skickas av servern, för hämtade filer
